--- a/desafios/curso em video/d12.2/style.css
+++ b/desafios/curso em video/d12.2/style.css
@@ -6,3 +6,64 @@
 
 }
 
+html, body{
+    min-height: 100vh;
+    background-color: darkgray;
+}
+
+header{
+    background-color: black;
+    color: white;
+    text-align: center;
+
+}
+
+header > h1 {
+    padding-top: 50px;
+    font-variant: small-caps;
+}
+
+header > p {
+    padding-bottom: 50px;
+}
+
+a{
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+a:hover{
+    text-decoration: underline;
+    color: rgba(128, 128, 128, 0.739);
+    transition-duration: .5s;
+}
+
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+}
+
+.normal{
+    background-color: white;
+    color: black;
+}
+
+.imagem{
+    background-color: rgb(51, 51, 51);
+    color: white;
+    background: black url('imagens/background001.jpg') center center no-repeat fixed;
+    background-size: cover;
+}
+.imagem > p {
+    background-color: rgba(0, 0, 0, 0.253);
+    width: 400px;
+}
+
+footer{
+    background-color: black;
+    text-align: center;
+    color: white;
+    padding: 10px;
+}
