--- a/desafios/curso em video/d12.2/style.css
+++ b/desafios/curso em video/d12.2/style.css
@@ -1,14 +1,27 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1:Verdana, Geneva, Tahoma, sans-serif;;
+    --fonte2:'Passion One', cursive;
+    --fonte3:'Sriracha', cursive;
+}
+
+
 *{
     padding: 0px;
     margin: 0px;
+    font-size: 1em;
 
 }
 
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header{
@@ -21,10 +34,13 @@ header{
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header > p {
     padding-bottom: 50px;
+    
 }
 
 a{
@@ -41,8 +57,15 @@ a:hover{
 section{
     padding-top: 10vh;
     padding-bottom: 10vh;
+    font-size:  3vw;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 .normal{
@@ -53,12 +76,26 @@ section{
 .imagem{
     background-color: rgb(51, 51, 51);
     color: white;
-    background: black url('imagens/background001.jpg') center center no-repeat fixed;
-    background-size: cover;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.402);
+
 }
 .imagem > p {
     background-color: rgba(0, 0, 0, 0.253);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
+    text-shadow: 1px 1px 0px black;
+
+}
+
+#img01{
+    background: black url('imagens/background001.jpg') right center no-repeat fixed;
+    background-size: cover;
+
+}
+
+#img02{
+    background: black url('imagens/background002.jpg') center center no-repeat fixed;
+    background-size: cover;
 }
 
 footer{
@@ -66,4 +103,5 @@ footer{
     text-align: center;
     color: white;
     padding: 10px;
+    font-family: var(--fonte1);
 }
